--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST = 127.0.0.1
-DB_USER = root
-DB_PASSWORD = 1166
-DB_NAME = project_db
-DB_PORT = 3306
+DB_HOST=127.0.0.1
+DB_USER=root
+DB_PASSWORD=1234yaeli
+DB_NAME=newdb
+DB_PORT=3306
